# API-todo

./: .gitignore  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0c4e718e6a53_init_db.py  4932cf9a3044_add_users.py  c24506ece4d5_add_to_model_user_role.py  fe7285819a93_add_to_model_user_email_and_avatar.py
src/conf/: config.py  containts.py  messages.py
src/controllers/: base.py  refresh_token_controllers.py  todos_controllers.py  user_controllers.py
src/core/: depend_service.py  email_token.py
src/database/: db.py
src/models/: models.py
src/routes/v1/: auth_route.py  todos_routes.py  users_route.py
src/schemas/: todo_schemas.py  user_schemas.py
src/services/: auth_service.py  service_email.py  todos_services.py  upload_file_service.py  user_sevice.py
src/services/templates/: verify_email.html
